# video-gen-bot

./: .env.example  Dockerfile  LICENSE  Makefile  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/common/: models.py
backend/config/: celery.py  routers.py  settings.py  urls.py
backend/core/: admin.py  apps.py  models.py  serializers.py  viewsets.py
backend/core/migrations/: 0001_initial.py
nginx/: nginx.conf
telegram_bot/: __main__.py  config.py  router.py
telegram_bot/api/: __init__.py  base.py  users.py
telegram_bot/handlers/: base.py  main.py
telegram_bot/keyboards/: main.py  utils.py
telegram_bot/texts/: __init__.py  main.py
